# DIFI_API

./: .gitignore  README.md  run_multi_process.sh
difi_dpdk_receiver/: CMakeLists.txt  README.md  run_difi_receiver.sh
difi_dpdk_receiver/include/: common.h
difi_dpdk_receiver/src/: difi_dpdk_receiver.c
docs/: Architecture_and_How_To_Run.md  Confluence_Page_Update_Content.md  DIFI_IQ_Dataflow.md  Spec_Compliance_Check.md  Third_Party_Integration_DPDK_Rings.md
sender_C_example/: CMakeLists.txt  README.md
sender_C_example/include/: common.h
